--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://abhinavxox.github.io",
+  "homepage": "https://abhinavxox.github.io/Portfolio",
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dom": "^0.0.3",
     "framer-motion": "^7.2.1",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
