--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "search-params": "^4.0.1",
     "semantic-ui-react": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
