--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -16,7 +16,7 @@ jobs:
       - run: npm run build
       - uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.MERONAAMABHINAV }}
           publish_dir: ./build
 name: CI/CD
 
@@ -36,5 +36,5 @@ jobs:
       - run: npm run build
       - uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.MERONAAMABHINAV }}
           publish_dir: ./build
